--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "apollo-boost": "^0.1.23",
+    "apollo-link-state": "^0.4.2",
+    "graphql": "^14.0.2",
     "react": "16.6.3",
-    "react-native": "0.57.8"
+    "react-apollo": "^2.3.3",
+    "react-native": "0.57.8",
+    "react-navigation": "^3.0.9"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
