--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.6.3",
     "react-apollo": "^2.3.3",
     "react-native": "0.57.8",
+    "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.9"
   },
   "devDependencies": {
