--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apollo-boost": "^0.1.23",
     "apollo-link-state": "^0.4.2",
     "graphql": "^14.0.2",
+    "lottie-react-native": "^2.5.11",
     "react": "16.6.3",
     "react-apollo": "^2.3.3",
     "react-native": "0.57.8",
