--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "apollo-boost": "^0.1.23",
     "apollo-link-state": "^0.4.2",
     "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.1",
     "lottie-react-native": "^2.5.11",
+    "prop-types": "^15.6.2",
     "react": "16.6.3",
     "react-apollo": "^2.3.3",
     "react-native": "0.57.8",
@@ -20,7 +22,13 @@
     "react-navigation": "^3.0.9"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "babel-jest": "23.6.0",
+    "eslint": "^5.12.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.0",
+    "eslint-plugin-react": "^7.12.4",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.51.1",
     "react-test-renderer": "16.6.3"
