--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,8 @@
     "parser": "babel-eslint",
     "plugins": ["react"],
     "rules": {
+      "global-require": 0,
+      "no-nested-ternary": 0,
       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
       "react/prop-types": ["error", { "ignore": ["navigation", "mutate"] }]
     }
