--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.57.8",
     "react-native-camera": "^1.9.2",
     "react-native-maps": "^0.23.0",
+    "react-native-modal": "^7.0.2",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.9"
   },
