--- a/ios/safety/Info.plist
+++ b/ios/safety/Info.plist
@@ -40,11 +40,13 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
   <key>NSCameraUsageDescription</key>
-  <string>Your message to user when the camera is accessed for the first time</string>
+  <string>$(PRODUCT_NAME) would like to use your camera</string>
   <key>NSPhotoLibraryUsageDescription</key>
-  <string>Your message to user when the photo library is accessed for the first time</string>
+  <string>$(PRODUCT_NAME) would like access to your photo gallery</string>
+  <key>NSPhotoLibraryAddUsageDescription</key>
+  <string>$(PRODUCT_NAME) would like to save photos to your photo gallery</string>
   <key>NSMicrophoneUsageDescription</key>
-  <string>Your message to user when the microphone is accessed for the first time</string>
+  <string>$(PRODUCT_NAME) would like to your microphone (for videos)</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Octicons.ttf</string>
