--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
       "global-require": 0,
       "no-nested-ternary": 0,
       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-      "react/prop-types": ["error", { "ignore": ["navigation", "mutate"] }]
+      "react/prop-types": ["error", { "ignore": ["navigation", "mutate"] }],
+      "no-underscore-dangle": ["error", { "allow": ["__typename", "_bar"] }]
     }
 }
