--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -148,6 +148,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-fast-image')
     implementation project(':react-native-image-picker')
     implementation project(':react-native-camera')
     implementation project(':react-native-maps')
