--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "16.6.3",
     "react-apollo": "^2.3.3",
     "react-native": "0.57.8",
+    "react-native-fast-image": "^5.1.2",
     "react-native-image-picker": "^0.28.0",
     "react-native-maps": "^0.23.0",
     "react-native-modal": "^7.0.2",
