--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -148,9 +148,8 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-fast-image')
+    implementation project(':react-native-fast-image')
     implementation project(':react-native-image-picker')
-    implementation project(':react-native-camera')
     implementation project(':react-native-maps')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-gesture-handler')
