Added Updatequery callback to create report mutation

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-apollo": "^2.3.3",
     "react-native": "0.57.8",
     "react-native-fast-image": "^5.1.2",
+    "react-native-geolocation-service": "^2.0.0",
     "react-native-image-picker": "^0.28.0",
     "react-native-maps": "^0.23.0",
     "react-native-modal": "^7.0.2",
