--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-fast-image": "^5.1.2",
     "react-native-geolocation-service": "^2.0.0",
     "react-native-image-picker": "^0.28.0",
+    "react-native-map-clustering": "^1.3.1",
     "react-native-maps": "^0.23.0",
     "react-native-modal": "^7.0.2",
     "react-native-vector-icons": "^6.1.0",
