--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "apollo-boost": "^0.1.23",
     "apollo-link-state": "^0.4.2",
+    "apollo-link-ws": "^1.0.14",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.1",
     "lottie-react-native": "^2.5.11",
@@ -23,7 +24,8 @@
     "react-native-maps": "^0.23.0",
     "react-native-modal": "^7.0.2",
     "react-native-vector-icons": "^6.1.0",
-    "react-navigation": "^3.0.9"
+    "react-navigation": "^3.0.9",
+    "subscriptions-transport-ws": "^0.9.15"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
