--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   },
   "dependencies": {
     "apollo-boost": "^0.1.23",
+    "apollo-cache-inmemory": "^1.5.1",
+    "apollo-client": "^2.5.1",
+    "apollo-link": "^1.2.8",
+    "apollo-link-http": "^1.5.11",
     "apollo-link-state": "^0.4.2",
     "apollo-link-ws": "^1.0.14",
     "apollo-utilities": "^1.2.0",
