Notifications off to prevent bugs on android

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     ext {
         buildToolsVersion = "27.0.3"
+        firebaseVersion = "+"
         minSdkVersion = 16
         compileSdkVersion = 27
         targetSdkVersion = 26
