--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -159,11 +159,19 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-vector-icons')
+    // implementation project(':react-native-push-notification')
+    implementation project(':react-native-maps')
+    implementation project(':react-native-image-picker')
     implementation project(':react-native-geolocation-service')
     implementation project(':react-native-fast-image')
-    implementation project(':react-native-image-picker')
-    implementation project(':react-native-maps')
-    implementation project(':react-native-vector-icons')
+    // implementation project(':lottie-react-native')
+    // implementation project(':react-native-push-notification')
+    // implementation project(':react-native-geolocation-service')
+    // implementation project(':react-native-fast-image')
+    // implementation project(':react-native-image-picker')
+    // implementation project(':react-native-maps')
+    // implementation project(':react-native-vector-icons')
     implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
