--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
       <activity
         android:name=".MainActivity"
         android:label="safetytrebisov"
+        android:screenOrientation="portrait"
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
         android:windowSoftInputMode="adjustResize">
         <intent-filter>
@@ -30,7 +31,7 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
-      <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyAmmWu22KRJjTYn8xd8e8iasXyt9jMc4x4"/>
-    </application>
+      <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyAmmWu22KRJjTYn8xd8e8iasXyt9jMc4x4" />
 
+    </application>
 </manifest>
