--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-map-clustering": "^1.3.2",
     "react-native-maps": "^0.23.0",
     "react-native-modal": "^7.0.2",
+    "react-native-push-notification": "^3.1.2",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.9",
     "subscriptions-transport-ws": "^0.9.15"
